--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "main.js",
   "dependencies": {
     "acorn": "^6.1.0",
+    "lodash": "^4.17.11",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
@@ -18,8 +19,7 @@
     "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.82.5",
-    "uuid4": "^1.1.4",
-    "webpack": "^4.19.1"
+    "uuid4": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,7 +27,8 @@
     "test": "react-scripts test",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.js src/**/*.jsx"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +40,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "webpack": "^4.19.1",
+    "eslint-plugin-react": "^7.12.4",
     "gh-pages": "^2.0.1"
   }
 }
