--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "2.1.3",
     "react-semantic-toasts": "^0.3.9",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.82.5",
     "uuid4": "^1.1.4"
